# Kalman-Smoother

./: .gitignore  CHANGELOG.md  README.md  octave_to_matlab.py
doc/: simultaneous_kalman_smoother.tex
octave/examples/: demo_compare_recursive.m  demo_const_em.m  demo_const_known.m  demo_constrained.m  demo_hp_credit.m  demo_hp_filter.m  demo_main.m  demo_missing.m  demo_robust.m  demo_robust_breaks.m  demo_slds.m  demo_tv_known.m
octave/examples/applications/: app1_natural_rate.m  app2_nowcasting.m  app3_nk_model.m
octave/simksmoother/: nearest_spd.m  simks_em_const.m  simks_marginal_loglik.m  simks_objective_const.m  simks_rts_reference.m  simks_selected_inv.m  simks_simulate_const.m  simks_smooth_const.m  simks_smooth_constrained.m  simks_smooth_robust.m  simks_smooth_slds.m  simks_smooth_tv.m
python/: README.md  pyproject.toml
python/examples/: _plot_helpers.py  demo_compare_recursive.py  demo_const_em.py  demo_const_known.py  demo_constrained.py  demo_hp_credit.py  demo_hp_filter.py  demo_main.py  demo_missing.py  demo_robust.py  demo_robust_breaks.py  demo_slds.py  demo_tv_known.py
python/examples/applications/: app1_natural_rate.py  app2_nowcasting.py  app3_nk_model.py
python/examples/figures/: README.txt
python/simksmoother/: __init__.py  constrained.py  em.py  marginal_loglik.py  robust.py  rts_reference.py  selected_inv.py  simulate.py  slds.py  smooth.py
python/tests/: test_all_demos.py
