[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "simksmoother"
version = "2.0.0"
description = "Simultaneous Kalman smoother formulated as one sparse block-tridiagonal linear system."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Teaching package" },
]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
]

[project.optional-dependencies]
fast = ["scikit-sparse"]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["simksmoother*"]
